--- a/iFioriDiTania/src/main/resources/application.properties
+++ b/iFioriDiTania/src/main/resources/application.properties
@@ -29,8 +29,8 @@ spring.thymeleaf.encoding=UTF-8
 #==================================
 # = google
 #==================================
-spring.security.oauth2.client.registration.google.client-id=757970382475-n5j8nb3kjgugvnfp6n4gcilgv6s5u3rt.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.scope=openid, profile, email
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
